# typysetup

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PYPI_GUIDE.md  README.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: ARCHITECTURE.md
src/typysetup/: __init__.py  main.py
src/typysetup/commands/: __init__.py  config_cmd.py  help_cmd.py  history_cmd.py  list_cmd.py  preferences_cmd.py  setup_orchestrator.py
src/typysetup/configs/: async-realtime.yaml  cli-tool.yaml  data-science.yaml  django.yaml  fastapi.yaml  ml-ai.yaml
src/typysetup/core/: AGENTS.md  __init__.py  config_loader.py  dependency_installer.py  file_backup_manager.py  gitignore_generator.py  preference_manager.py  project_config_manager.py  pyproject_generator.py  setup_type_registry.py  setup_type_utils.py  venv_manager.py  vscode_config_generator.py
src/typysetup/models/: AGENTS.md  __init__.py  builder.py  constraint.py  dependency_group.py  dependency_selection.py  project_config.py  project_metadata.py  setup_type.py  user_preference.py  vscode_config.py  vscode_config_merge.py
src/typysetup/utils/: __init__.py  paths.py  performance.py  prompts.py  rollback_context.py
tests/: conftest.py  test_cli_config_history.py
tests/commands/: test_orchestrator_advanced.py
tests/core/: test_project_config_manager.py
tests/integration/: test_cancellation_and_rollback.py  test_cli_commands.py  test_complete_setup_flow.py  test_dependency_installation.py  test_orchestrator_workflow.py  test_preferences_integration.py  test_registry_integration.py  test_venv_creation.py  test_vscode_config_integration.py
tests/unit/: test_config_loader.py  test_dependency_installer.py  test_dependency_models.py  test_gitignore_generator.py  test_paths.py  test_preference_manager.py  test_pyproject_generator.py  test_rollback_context.py  test_selection_models.py  test_setup_orchestrator.py  test_setup_registry.py  test_venv_manager.py  test_vscode_config_generator.py  test_vscode_config_models.py
